k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estate-service
  labels:
    app: estate-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: estate-service
  template:
    metadata:
      labels:
        app: estate-service
    spec:
      containers:
        - name: estate-service
          image: estate-service:latest
          ports:
            - containerPort: 8080
