k8s/base/admin-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
  labels:
    app: admin-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-ui
  template:
    metadata:
      labels:
        app: admin-ui
    spec:
      containers:
        - name: admin-ui
          image: admin-ui:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-ui
  labels:
    app: admin-ui
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: admin-ui
  type: ClusterIP
