k8s/base/client-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-ui
  labels:
    app: client-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-ui
  template:
    metadata:
      labels:
        app: client-ui
    spec:
      containers:
        - name: client-ui
          image: client-ui:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-ui
  labels:
    app: client-ui
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: client-ui
  type: ClusterIP
