k8s/base/email-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  labels:
    app: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
        - name: email-service
          image: email-service:latest
          ports:
            - containerPort: 8184
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
  labels:
    app: email-service
spec:
  ports:
    - port: 8184
      targetPort: 8184
  selector:
    app: email-service
  type: ClusterIP
