k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: estate-service
  labels:
    app: estate-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: estate-service
  type: ClusterIP
